--- a/CV.css
+++ b/CV.css
@@ -13,3 +13,9 @@ body {
 .contenedor-ejemplos p{
     color: blue;
 }
+
+.cajita-imagenes{
+    border: 3px solid blue;
+    margin: 16px; /*Esto separa el border de la caja de fuera (la roja)*/
+    padding: 32px; /*Esto separa las ímagenes de dentro del border*/
+}
