--- a/CV.css
+++ b/CV.css
@@ -2,6 +2,12 @@ body {
     background-color: beige;
 }
 
+section { 
+    border: 4px solid black;
+    padding: 10px;
+    margin: 6px;
+    width: 1000px;
+}
 /*#CajitaEjemplo{
     background-color: yellow;
     color: black;
