--- a/CV.css
+++ b/CV.css
@@ -8,6 +8,11 @@ section {
     margin: 6px;
     width: 1000px;
 }
+
+img {
+    border: 4px solid black;
+    height: 224px;
+}
 /*#CajitaEjemplo{
     background-color: yellow;
     color: black;
